workloads/mta-sts/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mta-sts
spec:
  hosts:
    - mta-sts.lth.so
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            exact: /.well-known/mta-sts.txt
      route:
        - destination:
            host: mta-sts.mta-sts.svc.cluster.local
            port:
              number: 80
